header : fix menu overlapping on 992px

--- a/src/public/less/components/header.less
+++ b/src/public/less/components/header.less
@@ -73,7 +73,7 @@
 		.navbar-toggle {
 			> .icon-bar {
 				transition: .3s;
-				@media (max-width: @screen-md-min) {
+				@media (max-width: @screen-sm-max) {
 					&:nth-child(2) {
 						transform: translate(0px, 5.2px) rotate(48deg);
 					}
@@ -106,7 +106,7 @@
 				color: #fff;
 			}
 
-			@media (max-width: @screen-md-min) {
+			@media (max-width: @screen-sm-max) {
 				color: #17233b;
 
 				&:hover {
@@ -130,7 +130,7 @@
 			color: #17233b;
 
 			&:hover {
-				@media (max-width: @screen-md-min) {
+				@media (max-width: @screen-sm-max) {
 					color: white;
 					background: grey;
 				}
@@ -182,7 +182,7 @@
 			margin-top: -7px;
 		}
 
-		@media (max-width: @screen-md-min) {
+		@media (max-width: @screen-sm-max) {
 			margin: 0;
 
 			& > li {
@@ -265,7 +265,7 @@
 		margin-bottom: 12px;
 		width: 340px;
 
-		@media (min-width: @screen-sm-max) and (max-width: @screen-lg-min) {
+		@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
 			width: 190px;
 		}
 	}
